Bug 1036863 - [MTP] Rename file/folder via MTP, r=dhylands

This patch fixed 'unable to rename file/folder via MTP' by
responding to MTP operation 'setObjectPropertyValue' correctly