dom/system/gonk/MozMtpCommon.h
@@ -28,6 +28,7 @@
 namespace android {
   class MOZ_EXPORT MtpServer;
   class MOZ_EXPORT MtpStorage;
+  class MOZ_EXPORT MtpStringBuffer;
   class MOZ_EXPORT MtpDatabase;
   class MOZ_EXPORT MtpDataPacket;
   class MOZ_EXPORT MtpProperty;
@@ -39,6 +40,7 @@ namespace android {
 #include <MtpProperty.h>
 #include <MtpServer.h>
 #include <MtpStorage.h>
+#include <MtpStringBuffer.h>
 #include <MtpTypes.h>
 
 #endif // mozilla_system_mtpcommon_h__
